--- a/index.html
+++ b/index.html
@@ -79,12 +79,13 @@
         }
     </script>
 </head>
+<div id="root"></div>
 <body>
     <div id="root"></div>
 
     <script type="text/babel">
         const { useState, useEffect, useRef, useMemo, useCallback } = React;
-        const { motion, AnimatePresence } = window.Motion || window.framerMotion;
+        const { motion, AnimatePresence } = window.Motion || window.framerMotion || {};
 
         // --- 1. CONFIGURATION ---
 
