--- a/index.html
+++ b/index.html
@@ -84,6 +84,41 @@
     </script>
 </head>
 <body>
+<div id="fatal-error-screen" style="display:none; position:fixed; inset:0; z-index:9999; background:#fff; padding:40px; font-family:sans-serif;">
+    <div style="max-width:400px; margin:auto; text-align:center;">
+        <div style="font-size:50px; margin-bottom:20px;">⚠️</div>
+        <h1 style="font-size:22px; margin:0 0 10px; color:#000;">App Initialization Failed</h1>
+        <p id="error-desc" style="color:#666; font-size:14px; line-height:1.5; margin-bottom:20px;">
+            The application encountered a fatal error during startup.
+        </p>
+        <div style="background:#f4f4f4; padding:15px; border-radius:8px; text-align:left; margin-bottom:20px;">
+            <code id="error-code" style="font-family:monospace; font-size:12px; color:#d00; word-break:break-all;">CODE: UNKNOWN_FATAL_ERR</code>
+        </div>
+        <button onclick="location.reload()" style="background:#000; color:#fff; border:none; padding:12px 24px; border-radius:8px; font-weight:bold; cursor:pointer;">Try Again</button>
+    </div>
+</div>
+
+<script>
+    // 1. CATCH SCRIPT LOAD FAILURES (CDN issues)
+    window.addEventListener('error', function(e) {
+        if (e.target.tagName === 'SCRIPT') {
+            showFatalError('RESOURCE_LOAD_FAIL', 'A critical library (' + e.target.src.split('/').pop() + ') failed to load. Check your internet connection.');
+        }
+    }, true);
+
+    // 2. CATCH RUNTIME CRASHES
+    window.onerror = function(msg, url, line) {
+        showFatalError('RUNTIME_EXCEPTION', msg + ' at line ' + line);
+        return false;
+    };
+
+    function showFatalError(code, desc) {
+        document.getElementById('fatal-error-screen').style.display = 'block';
+        document.getElementById('error-code').innerText = 'ERROR_ID: ' + code;
+        if(desc) document.getElementById('error-desc').innerText = desc;
+    }
+</script>
+
     <div id="root"></div>
 
     <script type="text/babel">
@@ -664,7 +699,8 @@
         };
 
         const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<App />);
+        root.render(<GlobalErrorBoundary><App /></GlobalErrorBoundary>);
+
     </script>
 </body>
 </html>
