--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <script src="https://unpkg.com/framer-motion@10.16.4/dist/framer-motion.js" crossorigin></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/hammerjs@2.0.8"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@3.0.1/dist/chartjs-plugin-annotation.min.js"></script>
@@ -390,7 +390,7 @@
                     console.error("Chart Render Failed:", err);
                 }
 
-                return () => chartRef.current?.destroy();
+                return function() { if (chartRef.current) chartRef.current.destroy(); };
             }, [entries, activeKey, unit, theme]);
 
             return (
