Replace GlobalErrorBoundary with ErrorBoundary

--- a/index.html
+++ b/index.html
@@ -707,8 +707,11 @@
         };
 
         const root = ReactDOM.createRoot(document.getElementById('root'));
-        root.render(<GlobalErrorBoundary><App /></GlobalErrorBoundary>);
-
+        root.render(
+            <ErrorBoundary>
+                <App />
+            </ErrorBoundary>
+        );
     </script>
 </body>
 </html>
