--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <script type="text/babel" src="js/db.js"></script>
     <script type="text/babel" src="js/themes.js"></script>
     <script type="text/babel" src="js/utils.js"></script>
+	<script type="text/babel" src="js/motion.js"></script>
     <script type="text/babel" src="js/components/ErrorBoundary.js"></script>
     <script type="text/babel" src="js/components/TodayTab.js"></script>
     <script type="text/babel" src="js/components/TrendsTab.js"></script>
